--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: hijread
-Title: What the Package Does (One Line, Title Case)
+Title: Convert from Gregorian to Hijri
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Luka", "Vasilj", , "vasilj.luka@gmail.com", role = c("aut", "cre"))
+Description: The package takes Gregorian calendar input and converts it into Islamic dates according to the Hijri calendar.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Imports: 
+    httr,
+    jsonlite
